--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -1,6 +1,9 @@
-$secondary-colour: #eeeeee;
+  $secondary-colour: #eeeeee;
 $primary-colour: #1C1C1C;
 
+:root {
+    font-size: 16px;
+}
 
 header {
     z-index: 999;
